Another potential fix

--- a/_config.yml
+++ b/_config.yml
@@ -50,14 +50,4 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
- defaults:
-  -   
-   scope:
-     type: pages
-   values:
-     permalink: /website-KareemDaCosta/:path/:basename:output_ext
-  -   
-   scope:
-     type: posts
-   values:
-     permalink: /website-KareemDaCosta/:year/:month/:day/:title
+baseurl: /website-KareemDaCosta
